<resources>
    <string name="app_name">基因模擬器 魔物獵人:物語2</string>
    <string name="init_waiting_text">搬蛋蒐集基因中，請稍後…</string>
    <string name="choose_want_gene">新增想要的基因</string>
    <string name="fetch_gene_error">拉取基因資料失敗</string>
    <string name="fetch_gene_process">基因資料處理中，請稍後</string>

    <string name="want_gene_area_title">待擺基因(用手指拖拉去想要的九宮格位置)</string>
    <string name="non_ele">無</string>
    <string name="fire_ele">火</string>
    <string name="water_ele">水</string>
    <string name="thunder_ele">雷</string>
    <string name="ice_ele">冰</string>
    <string name="dragon_ele">龍</string>
    <string name="technical_type">技巧</string>
    <string name="speed_type">速度</string>
    <string name="power_type">力量</string>
    <string name="non_type">無</string>
    <string name="type">猜拳</string>
    <string name="attr">屬性</string>
    <string name="gene_double">此基因已在九宮格內</string>
    <string name="line_percent">%d %%</string>
    <string name="about"> 版本：v%s    關於</string>
    <string name="about_developer">開發者：Solinari \nEmail：solinariwu@gmail.com</string>
    <string name="about_project_partner">感謝Sango , Skc , Coeur 協助開發</string>
    <string name="about_question">對此專案有任何問題或侵權疑慮，請Email聯絡我，感謝!</string>
    <string name="gene_detail_info_cost">消耗：%s </string>
    <string name="gene_detail_info_type">猜拳/屬性：%s </string>
    <string name="gene_detail_info_desc">描述：%s </string>
    <string name="gene_detail_info_from">出自：%s</string>
    <string name="gene_detail_info_error">取得基因詳細資訊錯誤</string>
    <string name="gene_item_more_info">更多資訊</string>
    <string name="close">關閉</string>
    <string name="update_gene_detail_info">更新基因詳細資訊</string>
</resources>