<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/attrTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/attr"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Entry"
        android:id="@+id/non"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/non_ele"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/non_color"
        app:closeIconEnabled="false"
        app:layout_constraintEnd_toStartOf="@id/fire"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attrTitle"/>

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Entry"
        android:id="@+id/fire"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/fire_ele"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/fire_color"
        app:closeIconEnabled="false"
        app:layout_constraintEnd_toStartOf="@id/water"
        app:layout_constraintStart_toEndOf="@id/non"
        app:layout_constraintTop_toBottomOf="@id/attrTitle"/>

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Entry"
        android:id="@+id/water"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/water_ele"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/water_color"
        app:closeIconEnabled="false"
        app:layout_constraintEnd_toStartOf="@id/thunder"
        app:layout_constraintStart_toEndOf="@id/fire"
        app:layout_constraintTop_toBottomOf="@id/attrTitle"/>

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Entry"
        android:id="@+id/thunder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/thunder_ele"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/thunder_color"
        app:closeIconEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/water"
        app:layout_constraintTop_toBottomOf="@id/attrTitle"/>

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Entry"
        android:id="@+id/ice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/ice_ele"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/ice_color"
        app:closeIconEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/non"
        app:layout_constraintStart_toStartOf="@id/non"
        app:layout_constraintTop_toBottomOf="@id/non"/>

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Entry"
        android:id="@+id/dragon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/dragon_ele"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/dragon_color"
        app:closeIconEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/fire"
        app:layout_constraintStart_toStartOf="@id/fire"
        app:layout_constraintTop_toBottomOf="@id/non"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/typeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dragon"/>

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Entry"
        android:id="@+id/technical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/technical_type"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/technical_color"
        app:closeIconEnabled="false"
        app:layout_constraintEnd_toStartOf="@id/speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeTitle"/>

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Entry"
        android:id="@+id/speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/speed_type"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/speed_color"
        app:closeIconEnabled="false"
        app:layout_constraintEnd_toStartOf="@id/power"
        app:layout_constraintStart_toEndOf="@id/technical"
        app:layout_constraintTop_toBottomOf="@id/typeTitle"/>

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Entry"
        android:id="@+id/power"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/power_type"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/power_color"
        app:closeIconEnabled="false"
        app:layout_constraintEnd_toStartOf="@id/noType"
        app:layout_constraintStart_toEndOf="@id/speed"
        app:layout_constraintTop_toBottomOf="@id/typeTitle"/>

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Entry"
        android:id="@+id/noType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/non_type"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/non_color"
        app:closeIconEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/power"
        app:layout_constraintTop_toBottomOf="@id/typeTitle"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/geneList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/technical"/>
</androidx.constraintlayout.widget.ConstraintLayout>